--- a/image/templates/kubernetes/helm/sensorchart/Chart.yaml
+++ b/image/templates/kubernetes/helm/sensorchart/Chart.yaml
@@ -1,6 +1,6 @@
 name: sensor
 description: StackRox Sensor
-version: {{.Version}}
+version: !!.MainVersion!!
 maintainers:
   - name: stackrox
     email: support@stackrox.com
