Scan images in admission control service (stackrox/rox#5130)

--- a/image/templates/kubernetes/kubectl/sensor-netpol.yaml
+++ b/image/templates/kubernetes/kubectl/sensor-netpol.yaml
@@ -15,6 +15,9 @@ spec:
       - podSelector:
           matchLabels:
             service: collector
+      - podSelector:
+          matchLabels:
+            app: admission-control
     ports:
     - port: 8443
       protocol: TCP
