--- a/image/templates/kubernetes/helm/sensorchart/templates/admission-controller.yaml
+++ b/image/templates/kubernetes/helm/sensorchart/templates/admission-controller.yaml
@@ -164,6 +164,9 @@ webhooks:
           - '*'
         operations:
           - CREATE
+        {{ if .Values.config.admissionControl.listenOnUpdates }}
+          - UPDATE
+        {{ end }}
         resources:
           - pods
           - deployments
