--- a/image/templates/kubernetes/kubectl/admission-controller.yaml
+++ b/image/templates/kubernetes/kubectl/admission-controller.yaml
@@ -238,6 +238,9 @@ webhooks:
           - '*'
         operations:
           - CREATE
+{{ if .AdmissionControlListenOnUpdates }}
+          - UPDATE
+{{ end }}
         resources:
           - pods
           - deployments
