Helm template file changes for Openshift, and fixes per helm lint suggestions and other misc improvements. (stackrox/rox#5129)

--- a/image/templates/kubernetes/helm/sensorchart/templates/admission-controller-secret.yaml
+++ b/image/templates/kubernetes/helm/sensorchart/templates/admission-controller-secret.yaml
@@ -1,13 +1,13 @@
-{{ if .Values.config.admissionControl.createService }}
+{{ if eq .Values.config.admissionControl.createService true }}
 apiVersion: v1
 kind: Secret
 data:
   ca.pem: |-
-  {{ (.Files.Glob "secrets/ca.pem").AsSecrets | indent 4 }}
+{{ (.Files.Get "secrets/ca.pem") | b64enc | indent 4 }}
   admission-control-cert.pem: |-
-{{ (.Files.Glob "secrets/admission-control-cert.pem").AsSecrets | indent 4 }}
+{{ (.Files.Get secrets/admission-control-cert.pem") | b64enc | indent 4 }}
   admission-control-key.pem: |-
-{{ (.Files.Glob "secrets/admission-control-key.pem").AsSecrets | indent 4 }}
+{{ (.Files.Get "secrets/admission-control-key.pem") | b64enc | indent 4 }}
 metadata:
   labels:
     auto-upgrade.stackrox.io/component: sensor
