--- a/image/templates/kubernetes/helm/sensorchart/templates/admission-controller.yaml
+++ b/image/templates/kubernetes/helm/sensorchart/templates/admission-controller.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.config.admissionControl.createService }}
+{{ if eq .Values.config.admissionControl.createService true}}
   apiVersion: v1
   kind: ServiceAccount
   metadata:
