--- a/image/templates/kubernetes/helm/sensorchart/templates/collector-secrets.yaml
+++ b/image/templates/kubernetes/helm/sensorchart/templates/collector-secrets.yaml
@@ -1,4 +1,4 @@
-{{if ne ".Values.collectionMethod" "NO_COLLECTION"}}
+{{if ne .Values.config.collectionMethod "NO_COLLECTION"}}
 apiVersion: v1
 kind: Secret
 data:
