--- a/image/templates/kubernetes/helm/sensorchart/templates/upgrader-serviceaccount.yaml
+++ b/image/templates/kubernetes/helm/sensorchart/templates/upgrader-serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.config.createUpgraderServiceAccount }}
+{{ if eq .Values.config.createUpgraderServiceAccount true}}
   apiVersion: v1
   kind: ServiceAccount
   metadata:
