Check for backend changes in non-groovy tests job (stackrox/rox#5151)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2107,6 +2107,8 @@ jobs:
 
     steps:
       - checkout
+      - check-backend-changes
+
       - check-label-to-skip-tests:
           label: ci-no-api-tests
 
