Enable new admission controller by default (stackrox/rox#5147)

--- a/image/templates/kubernetes/kubectl/admission-controller.yaml
+++ b/image/templates/kubernetes/kubectl/admission-controller.yaml
@@ -220,6 +220,7 @@ spec:
   selector:
     app: admission-control
   type: ClusterIP
+  sessionAffinity: None
 ---
 {{- end }}
 apiVersion: admissionregistration.k8s.io/v1beta1
