ROX-4520: Add a network policy for the admission control service (stackrox/rox#5167)

--- a/image/templates/kubernetes/helm/sensorchart/templates/admission-controller.yaml
+++ b/image/templates/kubernetes/helm/sensorchart/templates/admission-controller.yaml
@@ -146,6 +146,22 @@
       app: admission-control
     type: ClusterIP
 ---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: admission-control-no-ingress
+  namespace: stackrox
+  labels:
+    app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
+spec:
+  ingress: []
+  podSelector:
+    matchLabels:
+      app: admission-control
+  policyTypes:
+    - Ingress
+---
 {{ end }}
 
 apiVersion: admissionregistration.k8s.io/v1beta1
