Open admission control network policy (stackrox/rox#5177)

--- a/image/templates/kubernetes/kubectl/admission-controller.yaml
+++ b/image/templates/kubernetes/kubectl/admission-controller.yaml
@@ -142,6 +142,15 @@ spec:
                     operator: In
                     values:
                       - "true"
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 60
+              podAffinityTerm:
+                namespaces: ["stackrox"]
+                topologyKey: "kubernetes.io/hostname"
+                labelSelector:
+                  matchLabels:
+                    app: admission-control
       securityContext:
         runAsUser: 4000
         fsGroup: 4000
@@ -212,10 +221,13 @@ metadata:
     app.kubernetes.io/name: stackrox
     auto-upgrade.stackrox.io/component: "sensor"
 spec:
-  ingress: []
   podSelector:
     matchLabels:
       app: admission-control
+  ingress:
+    - ports:
+        - protocol: TCP
+          port: 8443
   policyTypes:
     - Ingress
 ---
