--- a/image/templates/kubernetes/helm/sensorchart/templates/admission-controller-secret.yaml
+++ b/image/templates/kubernetes/helm/sensorchart/templates/admission-controller-secret.yaml
@@ -1,13 +1,13 @@
-{{ if eq .Values.config.admissionControl.createService true }}
+{{ if .Values.config.admissionControl.createService }}
 apiVersion: v1
 kind: Secret
 data:
   ca.pem: |-
-{{ (.Files.Get "secrets/ca.pem") | b64enc | indent 4 }}
+{{ .Files.Get "secrets/ca.pem" | b64enc | indent 4 }}
   admission-control-cert.pem: |-
-{{ (.Files.Get secrets/admission-control-cert.pem") | b64enc | indent 4 }}
+{{ .Files.Get "secrets/admission-control-cert.pem" | b64enc | indent 4 }}
   admission-control-key.pem: |-
-{{ (.Files.Get "secrets/admission-control-key.pem") | b64enc | indent 4 }}
+{{ .Files.Get "secrets/admission-control-key.pem" | b64enc | indent 4 }}
 metadata:
   labels:
     auto-upgrade.stackrox.io/component: sensor
