--- a/image/templates/kubernetes/helm/sensorchart/Chart.yaml
+++ b/image/templates/kubernetes/helm/sensorchart/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 name: sensor
 description: StackRox Sensor
 version: !!.MainVersion!!
+appVersion: !!.MainVersion!!
 maintainers:
   - name: stackrox
     email: support@stackrox.com
